--- a/src/css/postingDetail.css
+++ b/src/css/postingDetail.css
@@ -1,7 +1,26 @@
 #job-posting-detail {
+  position: fixed;
+  display: inline-block;
+  margin-left: 25px;
   margin-top: 20px;
   background-color: rgba(0,0,0,0.6);
   box-shadow: rgba(0,0,0,.05) 0 1px 3px 0;
   border-radius: 10px;
   color: white;
+  padding: 1em 1em 1em 2.2em;
+}
+
+.detail-title {
+  font-size: medium;
+  color: #62BEFF;
+}
+
+.detail-company {
+  font-weight: bold;
+}
+
+.detail-source {
+}
+
+.deailta-location {
 }
