--- a/src/css/postingDetail.css
+++ b/src/css/postingDetail.css
@@ -32,7 +32,7 @@
 .detail-description {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  max-height: 500px;
+  height: 400px;
   overflow: auto;
   margin-bottom: 20px;
 }
