--- a/src/css/postingIndexItem.css
+++ b/src/css/postingIndexItem.css
@@ -12,7 +12,7 @@
 
 .job-postings-item .title {
   font-size: medium;
-  color: #62BEFF;
+  color: rgb(253, 172, 58);
 }
 
 .job-postings-item .company {
