--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,12 +5,16 @@ body {
 }
 
 body#background {
-  background: url('http://wallcomphd.com/wp-content/uploads/2015/04/HD-Tool-Flat-Wallpaper.jpg') no-repeat center center fixed;
+  background: url('http://wallcomphd.com/wp-content/uploads/2015/04/Autumn-Forest-Patrol-HD.jpg') no-repeat center center fixed;
   background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-background-size: cover;
   width: 100%;
-  height: 10
-  0%;
+  height: 100%;
+}
+
+.navbar-inverse {
+  background-color: #40474e;
+
 }
