--- a/src/css/postingDetail.css
+++ b/src/css/postingDetail.css
@@ -30,9 +30,7 @@
 }
 
 #job-posting-detail .source-logo {
-  position: absolute;
-  right: 45px;
-  top: 125px;
+  margin-left: 15px;
 }
 
 #job-posting-detail .source-image {
