--- a/src/css/postingIndexItem.css
+++ b/src/css/postingIndexItem.css
@@ -7,7 +7,7 @@
 
 .job-postings-item:hover {
   cursor: pointer;
-  background-color: rgba(0,151,207,0.2);
+  background-color: rgba(253,109,72,0.2);
 }
 
 .job-postings-item .title {
@@ -39,6 +39,7 @@
   color: #333;
   background-color: #fff;
   border-color: #ccc;
+  cursor: inherit;
 }
 
 .remove-button-features:active {
