--- a/src/css/postingDetail.css
+++ b/src/css/postingDetail.css
@@ -1,3 +1,8 @@
+.fixed {
+  position: fixed;
+  width: 33.3333%;
+}
+
 #job-posting-detail {
   margin-top: 20px;
   background-color: rgba(0,0,0,0.7);
