--- a/src/css/postingIndex.css
+++ b/src/css/postingIndex.css
@@ -5,32 +5,22 @@
   box-shadow: rgba(0,0,0,.05) 0 1px 3px 0;
   border-radius: 10px;
   display: inline-block;
-  width: 90%;
 }
 
 #index-container {
   padding: 20px 0px;
 }
 
-#left-chevron {
+.chevron {
   font-size: 200px;
   color: white;
-  position: fixed;
-  left: 80px;
-  top: 385px;
+  padding: 0px;
+  margin-top: 60%;
 }
 
 .fa-angle-left:hover {
   cursor: pointer;
   color: #FB8456;
-}
-
-#right-chevron {
-  font-size: 200px;
-  color: white;
-  position: fixed;
-  left: 1010px;
-  top: 385px;
 }
 
 .fa-angle-right:hover {
