redo layout of dashboard and use infinite reload

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,5 +1,5 @@
 .navbar-inverse {
-  background-color: #40474e;
+  background-color: #DC4E41;
   font-weight: bold;
 }
 
@@ -12,7 +12,7 @@
 }
 
 #signout {
-  background-color: #dc4e41;
+  background-color: #FD7C4F;
   color: white;
   text-decoration: none;
   padding: 15px 20px;
