--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13,3 +13,13 @@ body#background {
   width: 100%;
   height: 100%;
 }
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #FD7C4F;
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
