--- a/src/css/postingDetail.css
+++ b/src/css/postingDetail.css
@@ -1,15 +1,15 @@
 .fixed {
   position: fixed;
-  width: 33.3333%;
+  right: 0;
 }
 
 #job-posting-detail {
-  margin-top: 20px;
-  background-color: rgba(0,0,0,0.7);
+  background-color: #40474E;
   box-shadow: rgba(0,0,0,.05) 0 1px 3px 0;
-  border-radius: 10px;
   color: white;
-  padding: 2em 1em 1em 2.2em;
+  padding: 2em 2em 1em 2.2em;
+  width: 40%;
+  height: 85vh;
 }
 
 .detail-title {
