--- a/src/css/postingIndex.css
+++ b/src/css/postingIndex.css
@@ -1,14 +1,11 @@
 #job-postings-index {
   margin-bottom: 20px;
   padding-top: 15px;
-  background-color: rgba(0,0,0,0.7);
-  box-shadow: rgba(0,0,0,.05) 0 1px 3px 0;
-  border-radius: 10px;
-  display: inline-block;
-}
-
-#index-container {
-  padding: 20px 0px;
+  width: 60%;
+  position: fixed;
+  background-color: rgba(0,0,0,0.8);
+  height: 85vh;
+  overflow: hidden;
 }
 
 .chevron {
@@ -26,6 +23,12 @@
 .fa-angle-right:hover {
   cursor: pointer;
   color: #FB8456;
+}
+
+.navigation {
+  position: fixed;
+  z-index: 10;
+  top: 50vh;
 }
 
 #page-info {
