--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,14 @@
+#footer-container {
+  position: fixed;
+  height: 5vh;
+  width: 100%;
+  background-color: #DC4E41;
+  bottom: 0;
+}
+
 #footer {
-  position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 40px;
-  clear:both;
   color: white;
-  text-align: center;
+  margin-left: 50%;
 }
 
 #footer a{
@@ -15,7 +19,7 @@
 #footer .icon {
   font-size: 30px;
   border-left: 1px solid white;
-  margin: 10px 0px;
+  margin: 0.7vh 0;
   padding: 0px 15px;
 }
 
@@ -24,7 +28,7 @@
 }
 
 #footer .icon:hover {
-  color: #FB8456;
+  color: black;
   cursor: pointer;
 }
 
