--- a/src/css/postingIndex.css
+++ b/src/css/postingIndex.css
@@ -1,10 +1,9 @@
 #job-postings-index {
-  margin-bottom: 20px;
-  padding-top: 15px;
+  padding: 15px 0 21px 0;
   width: 60%;
   position: fixed;
   background-color: rgba(0,0,0,0.8);
-  height: 85vh;
+  height: 89vh;
   overflow: hidden;
 }
 
