--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -29,10 +29,10 @@
   width: 400px;
   color: white;
   padding-left: 3em;
-}
-
-.spinner p {
-  font-size: 40px;
+  
+  p {
+    font-size: 40px;
+  }
 }
 
 .fa-spinner {
