--- a/src/css/search.scss
+++ b/src/css/search.scss
@@ -1,5 +1,7 @@
+$slate-gray: #40474E;
+
 #search {
-  background-color: #40474E;
+  background-color: $slate-gray;
   box-shadow: rgba(0,0,0,.05) 0 1px 3px 0;
   color: white;
   padding: 2em 2em 1em 2.2em;
