--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 
 body {
-  font-family: 'Droid Sans', sans-serif;
+  font-family: 'Droid Sans', sans-serif
 }
 
 body#background {
