--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,16 +1,21 @@
+$dark-peach-orange: #DC4E41;
+$light-peach-orange: #F76836;
+
 .navbar-inverse {
-  background-color: #DC4E41;
+  background-color: $dark-peach-orange;
   font-weight: bold;
   height: 6vh;
+
+  .navbar-brand {
+    color: white;
+
+    &:hover {
+      background-color: $light-peach-orange;
+    }
+  }
 }
 
-.navbar-inverse .navbar-brand {
-  color: white;
-}
 
-.navbar-inverse .navbar-brand:hover {
-  color: #FDAC3A
-}
 
 #signout {
   z-index: 5;
@@ -19,8 +24,8 @@
   text-decoration: none;
   padding: 15px 20px;
   height: 6vh;
-}
 
-#signout:hover {
-  background-color: #F76836;
+  &:hover {
+    background-color: $light-peach-orange;
+  }
 }
